--- a/public/stylesheets/mapa.css
+++ b/public/stylesheets/mapa.css
@@ -10,8 +10,8 @@ border: 1px solid #94e1af;
   
 }
 #map1 {
-  width:46cm;
-	height:21cm;
+  width:90%;
+	height:85%;
 position:absolute;
 left:2cm;
 top:2cm;
