--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,7 +18,7 @@
 <body>
   
   <nav class="navbar navbar-default navbar-light">
-      <a class="navbar-brand" href="/">Logo</a>
+      <a class="navbar-brand" href="/"> <img src="../images/Logo.png"  style="width:60px; height:60px; transform: translate(0px,-20px);"></a>
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
